concord_examples/tests/ui/rate_limit_unknown_key.stderr
error: unknown rate_limit key `region`
  --> tests/ui/rate_limit_unknown_key.rs:12:31
   |
12 |             bucket method by [region, endpoint] { // ERROR: unknown key
   |                               ^^^^^^
